# lambda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  examples.lm  memoria.txt  test.lm
include/: ast_driver.hpp  driver.hpp  interpreter.hpp  terminal_colors.hpp
include/ast/: abstraction.hpp  abstraction_type.hpp  alias.hpp  application.hpp  ascription.hpp  ast.hpp  boolean.hpp  boolean_constant.hpp  common.hpp  conditional.hpp  constant_type.hpp  context.hpp  declaration.hpp  exception.hpp  fix.hpp  float_constant.hpp  identifier.hpp  list.hpp  list_primitives.hpp  local_definition.hpp  native_application.hpp  natural.hpp  natural_constant.hpp  natural_primitives.hpp  node.hpp  node_kind.hpp  node_type.hpp  node_visitor.hpp  operable_node.hpp  operable_object.hpp  operator_dot.hpp  pattern.hpp  print_primitive.hpp  register.hpp  sequence.hpp  string_constant.hpp  terminal_colors.hpp  tuple.hpp  type.hpp  typed_value.hpp  (+3 more)
include/ast/types/: arrow_type.hpp  bool_type.hpp  constant_type.hpp  dynamic_type.hpp  float_type.hpp  list_type.hpp  nat_type.hpp  operable_type.hpp  register_type.hpp  str_type.hpp  top_type.hpp  tuple_type.hpp  type.hpp  type_context.hpp  type_kind.hpp  undefined_type.hpp  unit_type.hpp
source/: driver.cpp  lexer.l  main.cpp  parser.y
source/ast/: abstraction.cpp  alias.cpp  application.cpp  ascription.cpp  boolean_constant.cpp  conditional.cpp  context.cpp  declaration.cpp  fix.cpp  float_constant.cpp  identifier.cpp  list.cpp  list_primitives.cpp  local_definition.cpp  native_application.cpp  natural_constant.cpp  natural_primitives.cpp  node.cpp  node_visitor.cpp  operator_dot.cpp  print_primitive.cpp  register.cpp  sequence.cpp  string_constant.cpp  tuple.cpp  unit.cpp  util.cpp  variable.cpp
source/ast/types/: arrow_type.cpp  constant_type.cpp  list_type.cpp  register_type.cpp  tuple_type.cpp  type.cpp  type_instances.cpp  types.cpp  undefined_type.cpp
